# pyfast

./: auth.py  authentic.py  data.py  errors.py  main.py  pyproject.toml
data/: creature.py  explorer.py  init.py  user.py
db/: cryptid.db
fake/: creature.py  explorer.py
service/: creature.py  explorer.py
test/unit/: test_request.py
test/unit/data/: test_creature.py
test/unit/service/: test_creature.py
web/: creature.py  explorer.py
