[tool.poetry]
name = "fapi"
version = "0.1.0"
description = ""
authors = ["Phil <phil@hengetech.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
